# P.H.A.N.T.O.M.

./: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: deploy-docs.yml  publish.yml  tests.yml
attacks/: lll_attack.py  lll_bkz.py
benchmarks/: bench.py  full_comparison.py  security_eval.py
examples/: demo.py
paper/notebooks/: lwe_intro.ipynb  quantum_attack_demo.ipynb
paper/notebooks/.ipynb_checkpoints/: lwe_intro-checkpoint.ipynb
src/phantom_pqc/: cli.py  kyber.py  ntru.py  toy_lwe.py
src/phantom_pqc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/phantom_pqc/signatures/: dilithium.py
tests/: test_all.py  test_crypto.py
